replacing generic exceptions with custom ones